--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ repositories {
 
 dependencies {
     implementation group: 'chat.tamtam', name: 'tamtam-bot-api', version: '0.3.0'
+    implementation group: 'chat.tamtam', name: 'tamtam-bot-sdk', version: '0.0.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
