--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,29 @@
 plugins {
+    id 'org.springframework.boot' version '2.5.0-M2'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
 }
 
 group 'org.example'
 version '1.0-SNAPSHOT'
+sourceCompatibility = '11'
 
 repositories {
     mavenCentral()
+    maven { url 'https://repo.spring.io/milestone' }
 }
 
 dependencies {
+    // TamTam
     implementation group: 'chat.tamtam', name: 'tamtam-bot-api', version: '0.3.0'
     implementation group: 'chat.tamtam', name: 'tamtam-bot-sdk', version: '0.0.1'
+
+    // Spring
+    implementation 'org.springframework.boot:spring-boot-starter'
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+    
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
 
