--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ dependencies {
     // Spring
     implementation 'org.springframework.boot:spring-boot-starter'
 
+    testImplementation group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.30'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     
