--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,14 @@ dependencies {
 
     // Spring
     implementation 'org.springframework.boot:spring-boot-starter'
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+    implementation('org.postgresql:postgresql')
 
     testImplementation group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.30'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-    
+
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
 
